[gd_scene load_steps=6 format=3 uid="uid://bwpn8aaiinymf"]

[ext_resource type="Theme" uid="uid://b0ahbsqigdcpj" path="res://assets/themes/menu.tres" id="1_61sqb"]
[ext_resource type="Texture2D" uid="uid://bh8jujh5se5w" path="res://assets/images/menu_background.png" id="2_ccyy0"]
[ext_resource type="Script" uid="uid://ds0one5g427bk" path="res://scripts/ui/intro_screen.gd" id="3_ccyy0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi7ol"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_difsp"]
bg_color = Color(0, 0, 0, 0.552941)

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_61sqb")
theme_override_styles/panel = SubResource("StyleBoxFlat_bi7ol")

[node name="BgMask" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_ccyy0")
expand_mode = 2
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
script = ExtResource("3_ccyy0")

[node name="TitleContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 160

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="PanelContainer/HBoxContainer/TitleContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_type_variation = &"HeaderLarge"
text = "STARScope"

[node name="Subtitle" type="Label" parent="PanelContainer/HBoxContainer/TitleContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Welcome to STARScope... your career awaits"

[node name="EmploymentContract" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(680, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_difsp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/EmploymentContract"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_right = 35

[node name="ContractTitle" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 33
text = "Stark Inc. Employment Contract"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0

[node name="NameInput" type="VBoxContainer" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/NameInput"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Enter your name"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/NameInput"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="SpecialisationInput" type="VBoxContainer" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/SpecialisationInput"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Choose your specialisation"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/SpecialisationInput"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
item_count = 5
popup/item_0/text = "Delivery"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Ground"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Tower"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "TRACON"
popup/item_3/id = 3
popup/item_4/text = "Center"
popup/item_4/id = 4
popup/item_4/disabled = true

[node name="Control3" type="Control" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="Terms" type="VBoxContainer" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/Terms"]
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
theme_override_font_sizes/font_size = 23
text = "Pay and Compensation: undefined"

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/Terms"]
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
theme_override_font_sizes/font_size = 23
text = "Pay and Compensation: undefined"

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/Terms"]
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
theme_override_font_sizes/font_size = 23
text = "Pay and Compensation: undefined"

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/Terms"]
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
theme_override_font_sizes/font_size = 23
text = "Pay and Compensation: undefined"

[node name="Control4" type="Control" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="AgreeToTerms" type="VBoxContainer" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/AgreeToTerms"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Do you agree to the terms and conditions?"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/AgreeToTerms"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Yes"

[node name="Control5" type="Control" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 0

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 23
text = "Sign Here"

[node name="ContinueText" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 110
theme_override_constants/margin_bottom = 65

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/ContinueText"]
layout_mode = 2
size_flags_vertical = 8
text = "Press any key to continue..."

[connection signal="text_changed" from="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/NameInput/LineEdit" to="PanelContainer/HBoxContainer" method="_on_name_submitted"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/SpecialisationInput/OptionButton" to="PanelContainer/HBoxContainer" method="_on_specialisation_selected"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/AgreeToTerms/CheckBox" to="PanelContainer/HBoxContainer" method="_on_terms_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EmploymentContract/MarginContainer/VBoxContainer/Button" to="PanelContainer/HBoxContainer" method="_on_contract_signed"]
